--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>\
+    <title>Document</title>
         <h1> Hello World </h1>
+        <h2> Hello Universe</h2>
 </head>
 <body>
     
